# pomme-synth

./: .gitignore  Cargo.toml  LICENSE  README.md
devlog/: week1.md
src/: bin.rs  editor.rs  gui.rs  interface.rs  lib.rs  logic.rs  params.rs  synth.rs  utils.rs  widget.rs  widgets.rs
src/editor/: mod.rs
src/widget/: scrollable_h.rs
