[package]
name = "pomme-synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
gui_only = []

[dependencies]
vst = "0.2.1"

log = "0.4.14"
simple-logging = "2.0.2"

# alg
fastrand = "1.6.0"
array-init = "2.0.0"
priority-queue = "1.2.1"
atomic_float = "0.1.0"

# gui
# NOTE: unfortunately we must use this (slightly) older version of baseview
baseview = {git = "https://github.com/RustAudio/baseview", rev = "004065e9a43e79751040879c572d95b9b63e0edc" } 
raw-window-handle = { version = "0.4" }

iced_baseview = { git = "https://github.com/BillyDM/iced_baseview.git", branch = "iced_git" }

#egui-baseview = {git = "https://github.com/BillyDM/egui-baseview", rev = "b7436c02309347e49ffd4491bf31cdef6e759eb7" }
#egui = "0.15" # have to use this older version of egui as well

[lib]
name = "pomme_synth_vst"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "pomme_synth_gui"
path = "src/bin.rs"
