[package]
name = "pomme-synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
gui_only = []

[dependencies]
vst = "0.2.1"

log = "0.4.14"
simple-logging = "2.0.2"

# alg
fastrand = "1.6.0"
array-init = "2.0.0"
priority-queue = "1.2.1"
atomic_float = "0.1.0"

# gui
raw-window-handle = { version = "0.4" }

# Note: getting these dependencies to work was terrifying
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "f6e99e9aa6f5aeb6b721cb05e4d882a51d995909" }
iced_baseview = { git = "https://github.com/BillyDM/iced_baseview.git", rev = "ac7cf12224fd922c3240dd86e7505f7d619ab7ea" } # main as of 2022-02-10

# for custom widgets (iced)
#iced_native = "0.4.0"
#iced_wgpu = "0.4.0"

#iced_core = "0.4"
iced_native = "0.4"
iced_graphics = "0.2"

# TODO: eventually implement support for wpu & glow
#iced_glow = { git = "https://github.com/iced-rs/iced.git", rev = "26d053a", optional = true }
#iced_wgpu = { git = "https://github.com/iced-rs/iced.git", rev = "26d053a", optional = true }

[lib]
name = "pomme_synth_vst"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "pomme_synth_gui"
path = "src/bin.rs"
